--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -13,9 +13,11 @@ display: inline-block;
 .container{
   max-width: 1250px;
   margin: 0 auto;
+
 }
 body{
   width: 100%;
   margin: 0;
   padding: 0;
+background: #b5c1f626;
 }
