--- a/css/main.css
+++ b/css/main.css
@@ -160,12 +160,13 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-top: 45px;
+  gap: 15px;
 }
 
 .our__item {
   color: rgb(54, 56, 83);
   font-family: Rubik;
-  font-size: 20px;
+  font-size: 25px;
   max-width: 850px;
   padding: 13px 37px;
   background: rgb(255, 255, 255);
@@ -175,8 +176,58 @@ body {
 .our__item2 {
   color: rgb(54, 56, 83);
   font-family: Rubik;
-  font-size: 20px;
+  font-size: 25px;
   background-color: hsl(0, 91%, 62%);
   padding: 13px 37px;
   border-radius: 5px;
+}
+
+@media screen and (max-width: 1000px) {
+  .our__item {
+    max-width: 995px;
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 922px) {
+  .our__item {
+    max-width: 945px;
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 863px) {
+  .our__item {
+    max-width: 895px;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 815px) {
+  .our__item {
+    max-width: 870px;
+    font-size: 11px;
+  }
+}
+@media screen and (max-width: 788px) {
+  .our__item {
+    max-width: 850px;
+    font-size: 9px;
+  }
+}
+@media screen and (max-width: 760px) {
+  .our__item {
+    max-width: 825px;
+    font-size: 7px;
+  }
+}
+@media screen and (max-width: 677px) {
+  .our__list {
+    max-width: 800px;
+    font-size: 5px;
+    flex-direction: column;
+  }
+  .our__title {
+    font-size: 30px;
+  }
+  .our__item2 {
+    font-size: 10px;
+  }
 }/*# sourceMappingURL=main.css.map */
