--- a/css/main.css
+++ b/css/main.css
@@ -140,12 +140,7 @@ body {
 @media screen and (max-width: 674px) {
   .fastfood__list {
     max-width: 855px;
-    font-size: 35px;
     flex-direction: column;
-  }
-  .fastfood__img {
-    max-width: 325px;
-    font-size: 30px;
   }
 }
 .our__title {
@@ -229,5 +224,62 @@ body {
   }
   .our__item2 {
     font-size: 10px;
+  }
+}
+.runfood__list {
+  max-width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 39px;
+}
+
+.runfood__img {
+  max-width: 144px;
+  font-size: 18px;
+  margin-bottom: 25px;
+}
+
+.runfood__item {
+  color: rgb(54, 56, 83);
+  font-family: Rubik;
+  font-size: 20px;
+}
+
+.runfood__btn {
+  color: rgb(255, 255, 255);
+  font-family: Rubik;
+  font-size: 15px;
+  border-radius: 5px;
+  background: rgb(255, 122, 80);
+  padding: 7px 13px;
+  margin-top: 11px;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 746px) {
+  .runfood__item {
+    max-width: 975px;
+    font-size: 15px;
+  }
+  .runfood__img {
+    max-width: 125px;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 730px) {
+  .runfood__item {
+    max-width: 945px;
+    font-size: 13;
+  }
+  .runfood__img {
+    max-width: 96px;
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 677px) {
+  .runfood__list {
+    max-width: 915px;
+    flex-direction: column;
   }
 }/*# sourceMappingURL=main.css.map */
