--- a/scss/blok/_header.scss
+++ b/scss/blok/_header.scss
@@ -17,7 +17,7 @@ align-items: center;
 .food__btn{
   color: white;
   font-size: 16px;
-  background-color:#f33333;
+  background: rgb(255, 122, 80);
   padding: 10px 12px;
   border-radius: 5px;
 }
