--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ body {
 .food__btn {
   color: white;
   font-size: 16px;
-  background-color: #f33333;
+  background: rgb(255, 122, 80);
   padding: 10px 12px;
   border-radius: 5px;
 }
@@ -106,7 +106,7 @@ body {
   font-family: Rubik;
   font-size: 20px;
   padding: 10px 15px;
-  background-color: #f33333;
+  background: rgb(255, 122, 80);
   margin-right: 7px;
   border-radius: 5px;
 }
@@ -172,7 +172,7 @@ body {
   color: rgb(54, 56, 83);
   font-family: Rubik;
   font-size: 25px;
-  background-color: hsl(0, 91%, 62%);
+  background: rgb(255, 122, 80);
   padding: 13px 37px;
   border-radius: 5px;
 }
@@ -281,5 +281,71 @@ body {
   .runfood__list {
     max-width: 915px;
     flex-direction: column;
+  }
+}
+.help__list {
+  max-width: 1210px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.help__img {
+  max-width: 526px;
+  text-align: center;
+}
+
+.help__title {
+  font-family: Rubik;
+  font-size: 36px;
+  margin: 0 auto;
+}
+
+.help__title1 {
+  font-family: Rubik;
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+.help__text {
+  color: rgb(54, 56, 83);
+  font-family: Rubik;
+  font-size: 20px;
+  margin-bottom: 14px;
+}
+
+.hel__link {
+  color: rgb(54, 56, 83);
+  font-family: Rubik;
+  font-size: 24px;
+  margin-bottom: 27px;
+}
+
+.help__btn {
+  color: rgb(255, 255, 255);
+  font-family: Rubik;
+  font-size: 20px;
+  border-radius: 30px 30px 1px 30px;
+  box-shadow: 0px 22px 40px 0px rgba(255, 104, 56, 0.19);
+  background: rgb(255, 122, 80);
+  padding: 17px 44px;
+}
+
+@media screen and (max-width: 930px) {
+  .help__list {
+    max-width: 950px;
+    font-size: 29px;
+  }
+  .help__img {
+    max-width: 475px;
+  }
+}
+@media screen and (max-width: 789px) {
+  .help__list {
+    max-width: 930px;
+    flex-direction: column;
+  }
+  .help__img {
+    max-width: 335px;
   }
 }/*# sourceMappingURL=main.css.map */
