--- a/scss/blok/_hero.scss
+++ b/scss/blok/_hero.scss
@@ -26,7 +26,7 @@ margin-bottom: 27px;
 font-family: Rubik;
 font-size: 20px;
 padding: 10px 15px;
-background-color: #f33333;
+background: rgb(255, 122, 80);
 margin-right: 7px;
 border-radius: 5px;
 }
