--- a/scss/blok/_our.scss
+++ b/scss/blok/_our.scss
@@ -28,7 +28,7 @@ border-radius:5px ;
   color: rgb(54, 56, 83);
 font-family: Rubik;
 font-size: 25px;
-background-color: hsl(0, 91%, 62%);
+background: rgb(255, 122, 80);
 padding: 13px 37px;
 border-radius: 5px;
 } 
